--- a/main.html
+++ b/main.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Helion Management! | </title>
-
     <!-- Bootstrap -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -246,7 +245,7 @@
                             <i class="fa fa-spinner fa-pulse fa-3x fa-fw" v-show="isRunning"></i>
                           </td>
                           <td>
-                            <button type="button" class="btn btn-primary btn-xs" v-on:click="reboot(changeToSuccess, changeToFail)"><i class="fa fa-refresh"></i> Reboot </button>
+                            <button type="button" class="btn btn-primary btn-xs" v-on:click="reboot()"><i class="fa fa-refresh"></i> Reboot </button>
                             <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-power-off"></i> Shutdown </a>
                             <a href="#" class="btn btn-info btn-xs"><i class="fa fa-toggle-on"></i> Power On </a>
                           </td>
@@ -325,10 +324,10 @@
     <script src="../js/bootstrap.min.js"></script>
     <!-- bootstrap-progressbar -->
     <script src="../js/bootstrap-progressbar.min.js"></script>
-
     <!-- Custom Theme Scripts -->
     <script src="../js/custom.min.js"></script>
     <script src="../js/vue.js"></script>
+    <script src="../js/vue-resource.min.js"></script>
     <script src="../js/app.js"></script>
   </body>
 </html>
